--- a/aula 5/estilo.css
+++ b/aula 5/estilo.css
@@ -7,7 +7,7 @@ body {
   }
   
   .logo {
-    text-align: end;
+    text-align: left;
   }
   
   .logo img {
@@ -17,7 +17,7 @@ body {
   /* Caixa principal do jogo */
   .conteudo-jogo {
     background: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 5px #ff1b7b;
+    box-shadow: 0 0 5px #43eaf0;
     margin: 30px;
     padding: 20px;
     height: 50vh;
